[FEATURE] Save dockers state separately in canvas-only mode

Now there are two different saved states for normal and canvas-only
mode. The saved canvas-only state is reset in the following cases:

1) The user loads any workspace resource (in this case state becomes
   invalid)

2) The user changes any canvas-only option in the preferences dialog,
   e.g. whether to show the menu or now (since it is also saved in the
   state)

BUG:474667